trying to add margin to the gif image to fix the position on mobile devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,8 +66,7 @@ iframe{
         margin-left:0px;
     }
     iframe{
-       position:relative;
-       left:80px;
+       margin-right:80px;
     }
     #submit{
         width:150px;
